[package]
name = "ip2locationio"
version = "1.0.0"
edition = "2024"
authors = ["IP2Location.io <support@ip2location.io>"]
description = "Rust client for IP2Location.io API"
readme = "readme.md"
homepage = "https://github.com/MailboxValidator/mailboxvalidator-rust"
repository = "https://github.com/MailboxValidator/mailboxvalidator-rust/"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["ip", "location", "geolocation", "whois", "hosted domain"]
categories = ["network-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0"
url = "2.4"
idna = "1.0"
